syntax = "proto3";


package wcity;

option java_multiple_files = true;
option java_package = "io.grpc.wcity.photo";
option java_outer_classname = "PhotoProto";
option objc_class_prefix = "RPC";

service PhotosService {
    rpc GetProfilePhoto (ProfilePhotoRequestP) returns (ProfilePhotoResponseP);
    rpc UploadProfilePhoto (ProfileUploadRequest) returns (ProfileUploadResponse);
    rpc GetCityImage (CityPhotoRequest) returns (CityPhotoResponse);
    rpc UploadCityPhoto (CityUploadRequest) returns (CityPhotoResponse);
    rpc GetPlacePhoto (PlacePhotoRequest) returns (PlacePhotoResponse);
    rpc UploadPlacePhoto (PlaceUploadRequest) returns (PlacePhotoResponse);
    rpc GetPostImage (PostPhotoRequest) returns (PostPhotoResponse);
    rpc UploadPostImage (PostUploadRequest) returns (PostPhotoResponse);
}

message ProfilePhotoRequestP {
    string email = 1;
    string token = 2;
}

message ProfilePhotoResponseP {
    string email = 1;
    bool valid = 2;
    string url = 3;
}

message ProfileUploadRequest {
    string email = 1;
    string token = 2;
    bytes image = 3;
}

message ProfileUploadResponse {
    string email = 1;
    bool valid = 2;
    string url = 3;
}
message CityPhotoRequest {
    string token = 1;
    string cityName = 2;
    string cityCountry = 3;

}
message CityUploadRequest {
    string token = 1;
    string cityName = 2;
    string cityCountry = 3;
    bytes image = 4;
}
message CityPhotoResponse {
    bool valid = 1;
    string cityName = 2;
    string cityCountry = 3;
    string url = 4;
}
message PlacePhotoRequest {
    string token = 1;
    string placeName = 2;
    string placeCity = 3;
    string placecountry = 4;
}
message PlaceUploadRequest {
    string token = 1;
    string placeName = 2;
    string placeCity = 3;
    string placecountry = 4;
    bytes image = 5;
}
message PlacePhotoResponse {
    bool valid = 1;
    string placeName = 2;
    string placeCity = 3;
    string placecountry = 4;
    string url = 5;
}
//name is city or place name
message PostPhotoRequest {
    string token = 1;
    string postId = 2;
    string userEmail = 3;
    PostType type = 4;
    string name = 5;
}
message PostUploadRequest {
    string token = 1;
    string postId = 2;
    string userEmail = 3;
    PostType type = 4;
    string name = 5;
    bytes image = 6;

}
message PostPhotoResponse {
    bool valid = 1;
    string postId = 2;
    string userEmail = 3;
    PostType type = 4;
    string name = 5;
    string url = 6;
}

enum PostType {
    CITY = 0;
    PLACE = 1;
}
