syntax = "proto3";


package wcity;

option java_multiple_files = true;
option java_package = "io.grpc.wcity.postdb";
option java_outer_classname = "PostDBProto";
option objc_class_prefix = "RPC";

service PostsService{
  rpc CreateCityPost(CityPost) returns (CreatePostResponse);
  rpc CreatePlacePost(PlacePost) returns (CreatePostResponse); 
  rpc GetPlacePosts(PostsRequest) returns (CityPostsResponse);
  rpc GetCityPosts(PostsRequest) returns(PlacePostsResponse);
  rpc UpdatePlacePost(UpdatePostRequest) returns (UpdatePostResponse);
  rpc UpdateCityPost(UpdatePostRequest) returns (UpdatePostResponse);


}

message CityPost{
    int32 indexId =1;
    string creatorEmail = 2;
    string cityName = 3;
    string cityCountry =4;
    string title =5;
    string body =6;
    string timeStamp = 7;
    repeated string likes =8;
    string mongoId = 9;
}
message PlacePost{
    int32 indexId =1;
    string creatorEmail = 2;
    string cityName = 3;
    string countryName =4;
    string placeName =5;
    string title =6;
    string body =7;
    string timeStamp = 8;
    repeated string likes =9;
    string mongoId = 10;
}

message CreatePostResponse{
  bool valied =1;
  int32 indexId = 2;
  
}
message PostsRequest{
  int32 indexId =1;
}
message CityPostsResponse{
  bool valid = 1;
  int32 indexId =2;
  repeated CityPost posts =3;
}
message PlacePostsResponse{
    bool valid =1;
    int32 indexId =2;
    repeated PlacePost posts =3;
}

message UpdatePostRequest{
  string mongoId = 1;
  string title = 2;
  string body = 3;
}

message UpdatePostResponse{
   bool valid = 1;

}